cmake_minimum_required(VERSION 3.16)

project(FantasyMovies VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.2 REQUIRED COMPONENTS Quick)


qt_add_executable(appFantasyMovies
    main.cpp
    CReadFile.cpp
    CFantasyMovies.cpp
)


qt_add_qml_module(appFantasyMovies
    URI FantasyMovies
    VERSION 1.0
    QML_FILES
        Main.qml
        RESOURCES input.txt
        SOURCES CReadFile.h
        SOURCES CReadFile.cpp
        SOURCES CFantasyMovies.h
        SOURCES CFantasyMovies.cpp
        SOURCES CRandom.h
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appFantasyMovies PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appFantasyMovies
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appFantasyMovies
    PRIVATE Qt6::Quick
)

include(GNUInstallDirs)
install(TARGETS appFantasyMovies
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

